Add python to test requirements

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,6 +28,8 @@ requirements:
     - libclang-cpp {{ llvm_version }}
     - lld {{ llvm_version }}
 test:
+  requires:
+    - python >=3.8
   commands:
     - {{ name }} --version
     - {{ name }} --help
