--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -4,3 +4,8 @@ github:
 conda_forge_output_validation: true
 conda_build:
   pkg_format: '2'
+provider:
+  linux_aarch64: default
+build_platform:
+  osx_arm64: osx_64
+test: native_and_emulated
