Revert "Build from git url rather than snapshot"
This reverts commit d3ebbcd9683bb0f334054720410731ace4162a81.

This was pushed by accident. It should have been done by PR.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,12 +7,11 @@ package:
   version: {{ version }}
 
 source:
-  git_url: https://github.com/{{ name }}/{{ name }}.git
-  git_rev: {{ version }}
+  url: https://github.com/{{ name }}/{{ name }}/archive/refs/tags/{{ version }}.tar.gz
   sha256: 34c7636da2abe7b86580b53b762f5269e71efff460f24f17d5913c56eb99cb7c
 
 build:
-  number: 1
+  number: 0
   skip: true  # [win]
 
 requirements:
