--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,8 +11,7 @@ source:
   sha256: 34c7636da2abe7b86580b53b762f5269e71efff460f24f17d5913c56eb99cb7c
 
 build:
-  number: 0
-  skip: true  # [win]
+  number: 1
 
 requirements:
   build:
@@ -20,7 +19,7 @@ requirements:
     - {{ compiler('cxx') }}
     - cmake
     - python
-    - make
+    - ninja
   host:
     - clangdev {{ llvm_version }}
     - llvmdev {{ llvm_version }}
