Add zlib build requirement for win

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,6 +20,7 @@ requirements:
     - cmake
     - python
     - ninja
+    - zlib  # [win]
   host:
     - clangdev {{ llvm_version }}
     - llvmdev {{ llvm_version }}
